scss, styles.scss. font, card edit

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Additional CSS must be placed after Bootstrap CSS -->
   <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
   <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway|Righteous" />
   <link rel="stylesheet" href="css/styles.css" />
 
 </head>
@@ -46,8 +46,8 @@
     <div class="container">
       <div class="row">
         <div class="col">
-          <h1>NuCamp</h1>
-          <h2>a better way to camp</h2>
+          <h1>CreatorHub</h1>
+          <h2>Create a space for ingenuity</h2>
         </div>
       </div>
     </div>
