--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
         <li class="nav-item"><a class="nav-link" href="#">Activity</a></li>
         <li class="nav-item"><a class="nav-link active" href="#">Discover</a></li>
         <li class="nav-item"><a class="nav-link" href="#">My Portfolio</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Site Map</a></li>
         <li class="nav-item"><a class="nav-link" href="#">Organization</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">ADD WORK</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">POST WORK</a></li>
       </ul>
     </div>
 
-    <button class="ml-auto">login in</button>
+    <button type="button" class="btn btn-sm btn-outline-dark ml-auto mr-2">login in</button>
+    <button type="button" class="btn btn-sm btn-outline-dark ml-auto">Sign up</button>
   </nav>
   <!-- End of Navbar -->
 
@@ -193,10 +193,10 @@
                 <a href="#"><img src="img/hut.jpg" class="card-img-top" alt="..."></a>
                 <div class="card-body">
                   <a href="#">
-                    <h5 class="card-title">Deer Graphic</h5>
+                    <h5 class="card-title">Hut under the Stalight</h5>
                   </a>
                   <hr>
-                  <p>Photography, Graphics, Colors</p>
+                  <p>Photography, Colors, Illumination</p>
                   <p class="d-inline">by</p>
                   <a class="d-inline" id="creator-link" href="#">Thomas Pictact</a>
                 </div>
@@ -213,10 +213,10 @@
                 <a href="#"><img src="img/los.jpg" class="card-img-top" alt="..."></a>
                 <div class="card-body">
                   <a href="#">
-                    <h5 class="card-title">Deer Graphic</h5>
+                    <h5 class="card-title">New York City</h5>
                   </a>
                   <hr>
-                  <p>Photography, Graphics, Colors</p>
+                  <p>Photography, City, Natural</p>
                   <p class="d-inline">by</p>
                   <a class="d-inline" id="creator-link" href="#">Thomas Pictact</a>
                 </div>
@@ -238,10 +238,10 @@
                 <a href="#"><img src="img/office.jpg" class="card-img-top" alt="..."></a>
                 <div class="card-body">
                   <a href="#">
-                    <h5 class="card-title">Deer Graphic</h5>
+                    <h5 class="card-title">Studio Work</h5>
                   </a>
                   <hr>
-                  <p>Photography, Graphics, Colors</p>
+                  <p>Studio, Blog, Ideas</p>
                   <p class="d-inline">by</p>
                   <a class="d-inline" id="creator-link" href="#">Thomas Pictact</a>
                 </div>
@@ -258,10 +258,10 @@
                 <a href="#"><img src="img/paint.jpg" class="card-img-top" alt="..."></a>
                 <div class="card-body">
                   <a href="#">
-                    <h5 class="card-title">Deer Graphic</h5>
+                    <h5 class="card-title">Red Splash</h5>
                   </a>
                   <hr>
-                  <p>Photography, Graphics, Colors</p>
+                  <p>Paint, Red, Colors, Acrylic</p>
                   <p class="d-inline">by</p>
                   <a class="d-inline" id="creator-link" href="#">Thomas Pictact</a>
                 </div>
@@ -278,7 +278,7 @@
                 <a href="#"><img src="img/tiles-shapes.jpg" class="card-img-top" alt="..."></a>
                 <div class="card-body">
                   <a href="#">
-                    <h5 class="card-title">Deer Graphic</h5>
+                    <h5 class="card-title">Craft, Colors, Architecture</h5>
                   </a>
                   <hr>
                   <p>Photography, Graphics, Colors</p>
@@ -301,13 +301,13 @@
             <div class="col">
 
               <div class="card discover-card" style="width: 12rem;">
-                <a href="#"><img src="img/deer-graphic.jpg" class="card-img-top" alt="..."></a>
+                <a href="#"><img src="img/adult.jpg" class="card-img-top" alt="..."></a>
                 <div class="card-body">
                   <a href="#">
-                    <h5 class="card-title">Deer Graphic</h5>
+                    <h5 class="card-title">Red Heart Hands</h5>
                   </a>
                   <hr>
-                  <p>Photography, Graphics, Colors</p>
+                  <p>Photography, People, Red, Unity</p>
                   <p class="d-inline">by</p>
                   <a class="d-inline" id="creator-link" href="#">Thomas Pictact</a>
                 </div>
@@ -321,13 +321,13 @@
               </div>
 
               <div class="card discover-card" style="width: 12rem;">
-                <a href="#"><img src="img/deer-graphic.jpg" class="card-img-top" alt="..."></a>
+                <a href="#"><img src="img/art.jpg" class="card-img-top" alt="..."></a>
                 <div class="card-body">
                   <a href="#">
-                    <h5 class="card-title">Deer Graphic</h5>
+                    <h5 class="card-title">Paints</h5>
                   </a>
                   <hr>
-                  <p>Photography, Graphics, Colors</p>
+                  <p>Paint, Photography, Colors</p>
                   <p class="d-inline">by</p>
                   <a class="d-inline" id="creator-link" href="#">Thomas Pictact</a>
                 </div>
@@ -341,78 +341,13 @@
               </div>
 
               <div class="card discover-card" style="width: 12rem;">
-                <a href="#"><img src="img/deer-graphic.jpg" class="card-img-top" alt="..."></a>
+                <a href="#"><img src="img/bicycle.jpg" class="card-img-top" alt="..."></a>
                 <div class="card-body">
                   <a href="#">
-                    <h5 class="card-title">Deer Graphic</h5>
+                    <h5 class="card-title">Bicycle</h5>
                   </a>
                   <hr>
-                  <p>Photography, Graphics, Colors</p>
-                  <p class="d-inline">by</p>
-                  <a class="d-inline" id="creator-link" href="#">Thomas Pictact</a>
-                </div>
-                <div class="card-footer">
-                  <ul class="list-inline">
-                    <li role="button" class="btn btn-sm list-inline-item"><i class="fa fa-thumbs-up fa-sm"></i></li>
-                    <li role="button" class="btn btn-sm list-inline-item"><i class="fa fa-eye fa-sm"></i></li>
-                    <li role="button" class="btn btn-sm list-inline-item"><i class="fa fa-comment fa-sm"></i></li>
-                  </ul>
-                </div>
-              </div>
-              <!-- End Of Column -->
-            </div>
-
-            <!-- New Column -->
-            <div class="col">
-
-              <div class="card discover-card" style="width: 12rem;">
-                <a href="#"><img src="img/deer-graphic.jpg" class="card-img-top" alt="..."></a>
-                <div class="card-body">
-                  <a href="#">
-                    <h5 class="card-title">Deer Graphic</h5>
-                  </a>
-                  <hr>
-                  <p>Photography, Graphics, Colors</p>
-                  <p class="d-inline">by</p>
-                  <a class="d-inline" id="creator-link" href="#">Thomas Pictact</a>
-                </div>
-                <div class="card-footer">
-                  <ul class="list-inline">
-                    <li role="button" class="btn btn-sm list-inline-item"><i class="fa fa-thumbs-up fa-sm"></i></li>
-                    <li role="button" class="btn btn-sm list-inline-item"><i class="fa fa-eye fa-sm"></i></li>
-                    <li role="button" class="btn btn-sm list-inline-item"><i class="fa fa-comment fa-sm"></i></li>
-                  </ul>
-                </div>
-              </div>
-
-              <div class="card discover-card" style="width: 12rem;">
-                <a href="#"><img src="img/deer-graphic.jpg" class="card-img-top" alt="..."></a>
-                <div class="card-body">
-                  <a href="#">
-                    <h5 class="card-title">Deer Graphic</h5>
-                  </a>
-                  <hr>
-                  <p>Photography, Graphics, Colors</p>
-                  <p class="d-inline">by</p>
-                  <a class="d-inline" id="creator-link" href="#">Thomas Pictact</a>
-                </div>
-                <div class="card-footer">
-                  <ul class="list-inline">
-                    <li role="button" class="btn btn-sm list-inline-item"><i class="fa fa-thumbs-up fa-sm"></i></li>
-                    <li role="button" class="btn btn-sm list-inline-item"><i class="fa fa-eye fa-sm"></i></li>
-                    <li role="button" class="btn btn-sm list-inline-item"><i class="fa fa-comment fa-sm"></i></li>
-                  </ul>
-                </div>
-              </div>
-
-              <div class="card discover-card" style="width: 12rem;">
-                <a href="#"><img src="img/deer-graphic.jpg" class="card-img-top" alt="..."></a>
-                <div class="card-body">
-                  <a href="#">
-                    <h5 class="card-title">Deer Graphic</h5>
-                  </a>
-                  <hr>
-                  <p>Photography, Graphics, Colors</p>
+                  <p>Illustration, Art, Modernism</p>
                   <p class="d-inline">by</p>
                   <a class="d-inline" id="creator-link" href="#">Thomas Pictact</a>
                 </div>
@@ -431,13 +366,13 @@
             <div class="col">
 
               <div class="card discover-card" style="width: 12rem;">
-                <a href="#"><img src="img/deer-graphic.jpg" class="card-img-top" alt="..."></a>
+                <a href="#"><img src="img/fantasy.jpg" class="card-img-top" alt="..."></a>
                 <div class="card-body">
                   <a href="#">
-                    <h5 class="card-title">Deer Graphic</h5>
+                    <h5 class="card-title">Lost Distortion</h5>
                   </a>
                   <hr>
-                  <p>Photography, Graphics, Colors</p>
+                  <p>Fantasy, Graphics, Curiousity</p>
                   <p class="d-inline">by</p>
                   <a class="d-inline" id="creator-link" href="#">Thomas Pictact</a>
                 </div>
@@ -451,13 +386,13 @@
               </div>
 
               <div class="card discover-card" style="width: 12rem;">
-                <a href="#"><img src="img/deer-graphic.jpg" class="card-img-top" alt="..."></a>
+                <a href="#"><img src="img/light.jpg" class="card-img-top" alt="..."></a>
                 <div class="card-body">
                   <a href="#">
-                    <h5 class="card-title">Deer Graphic</h5>
+                    <h5 class="card-title">Plant Light</h5>
                   </a>
                   <hr>
-                  <p>Photography, Graphics, Colors</p>
+                  <p>Plant, Light, Life, Photography</p>
                   <p class="d-inline">by</p>
                   <a class="d-inline" id="creator-link" href="#">Thomas Pictact</a>
                 </div>
@@ -471,13 +406,78 @@
               </div>
 
               <div class="card discover-card" style="width: 12rem;">
-                <a href="#"><img src="img/deer-graphic.jpg" class="card-img-top" alt="..."></a>
+                <a href="#"><img src="img/painting.jpg" class="card-img-top" alt="..."></a>
                 <div class="card-body">
                   <a href="#">
-                    <h5 class="card-title">Deer Graphic</h5>
+                    <h5 class="card-title">Moonlight</h5>
                   </a>
                   <hr>
-                  <p>Photography, Graphics, Colors</p>
+                  <p>Moonlight, Painting, Horizon</p>
+                  <p class="d-inline">by</p>
+                  <a class="d-inline" id="creator-link" href="#">Thomas Pictact</a>
+                </div>
+                <div class="card-footer">
+                  <ul class="list-inline">
+                    <li role="button" class="btn btn-sm list-inline-item"><i class="fa fa-thumbs-up fa-sm"></i></li>
+                    <li role="button" class="btn btn-sm list-inline-item"><i class="fa fa-eye fa-sm"></i></li>
+                    <li role="button" class="btn btn-sm list-inline-item"><i class="fa fa-comment fa-sm"></i></li>
+                  </ul>
+                </div>
+              </div>
+              <!-- End Of Column -->
+            </div>
+
+            <!-- New Column -->
+            <div class="col">
+
+              <div class="card discover-card" style="width: 12rem;">
+                <a href="#"><img src="img/sailing-ship.jpg" class="card-img-top" alt="..."></a>
+                <div class="card-body">
+                  <a href="#">
+                    <h5 class="card-title">Sailing Ship</h5>
+                  </a>
+                  <hr>
+                  <p>Photography, Ships, Horizon, Sea</p>
+                  <p class="d-inline">by</p>
+                  <a class="d-inline" id="creator-link" href="#">Thomas Pictact</a>
+                </div>
+                <div class="card-footer">
+                  <ul class="list-inline">
+                    <li role="button" class="btn btn-sm list-inline-item"><i class="fa fa-thumbs-up fa-sm"></i></li>
+                    <li role="button" class="btn btn-sm list-inline-item"><i class="fa fa-eye fa-sm"></i></li>
+                    <li role="button" class="btn btn-sm list-inline-item"><i class="fa fa-comment fa-sm"></i></li>
+                  </ul>
+                </div>
+              </div>
+
+              <div class="card discover-card" style="width: 12rem;">
+                <a href="#"><img src="img/cloister.jpg" class="card-img-top" alt="..."></a>
+                <div class="card-body">
+                  <a href="#">
+                    <h5 class="card-title">Cloister</h5>
+                  </a>
+                  <hr>
+                  <p>Illustration, Architecture</p>
+                  <p class="d-inline">by</p>
+                  <a class="d-inline" id="creator-link" href="#">Thomas Pictact</a>
+                </div>
+                <div class="card-footer">
+                  <ul class="list-inline">
+                    <li role="button" class="btn btn-sm list-inline-item"><i class="fa fa-thumbs-up fa-sm"></i></li>
+                    <li role="button" class="btn btn-sm list-inline-item"><i class="fa fa-eye fa-sm"></i></li>
+                    <li role="button" class="btn btn-sm list-inline-item"><i class="fa fa-comment fa-sm"></i></li>
+                  </ul>
+                </div>
+              </div>
+
+              <div class="card discover-card" style="width: 12rem;">
+                <a href="#"><img src="img/eye.jpg" class="card-img-top" alt="..."></a>
+                <div class="card-body">
+                  <a href="#">
+                    <h5 class="card-title">Eye</h5>
+                  </a>
+                  <hr>
+                  <p>Illustration, Humanistic, Eye</p>
                   <p class="d-inline">by</p>
                   <a class="d-inline" id="creator-link" href="#">Thomas Pictact</a>
                 </div>
