--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css" />
 
+  <!-- Font Awesome -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <script src="https://use.fontawesome.com/c770d4d2d9.js"></script>
+
 </head>
 
 <body>
